--- a/action.yml
+++ b/action.yml
@@ -29,19 +29,22 @@ runs:
         pr_diff=$(gh pr diff ${{ github.event.number }} --patch | grep -vE "^$" | jq -Rsa . | sed -E 's/(^.)|(.$)//g')
 
         echo "Building payload"
-        json_payload=$(cat <<EOF
+        payload_file=$(mktemp)
+        cat > "$payload_file" <<EOF
         {
           "model": "$MODEL_NAME",
           "messages": [{"role": "user", "content": "Review this PR for me, be descriptive but straightforward, tell me what it does, a brief summary of the changes and if there are any reasons to reject this PR: \n$pr_diff"}]
         }
         EOF
-        )
 
         # Query TelnyxInference and extract only the response content
         response=$(curl -s https://api.telnyx.com/v2/ai/chat/completions \
           -H "Content-Type: application/json" \
           -H "Authorization: Bearer $TELNYX_API_KEY" \
-          -d "$json_payload" | jq -r ".choices[].message.content")
+          -d "@$payload_file" | jq -r ".choices[].message.content")
+
+        # Clean up temp file
+        rm -f "$payload_file"
 
         if [ $? -ne '0' ]; then
           echo "Unable to contact TelnyxInference"
